0.10 to current

	Resolve symbolic links for mime-type matchers.  Thanks to Vigi.

	Fixed `:tabnew ..` not working due to use of uninitialized data.

	Fixed access to uninitialized memory on clearing view after graphical
	preview.

	Fixed possible crashes after certain patterns of using view mode and
	closing tabs.

0.10-beta to 0.10 (2018-11-11)

	Display list of files in removal confirmation dialog.  Thanks to ovk.

	Support embedded terminal in the plugin for newer Vim.

	Return "broken" from filetype({fnum}, 1) for inaccessible link target.
	Thanks to filterfalse.

	Avoid unnecessary reloading file list after pressing "=" to enter local
	filter.

	Fixed crash on pasting elements of paths that contain broken UTF-8
	sequences into command-line using Ctrl-X + key.  Thanks to Jose
	Riha (a.k.a. jose1711).

	Fixed extra unlisted buffer beeing kept around in neovim on :*Vifm
	commands.  Thanks to randomizedthinking.

	Fixed invalid treatment of numerical arguments of filetype().  Thanks to
	filterfalse.

	Fixed crash on previewing contents of directory without execute right in
	miller view.  Thanks to filterfalse.

	Fixed statusline highlighting being broken by wide characters.

0.9.1 to 0.10-beta (2018-10-28)

	Added support for arbitrary expressions in 'statusline': '%{...}',
	e.g. '%{&sort}' evaluates to the value of the sort option.  Patch by Dmitry
	Frank (a.k.a. dimonomid).

	Added TabLine highlight group for highlighting tab line.

	Added 'tabscope' option that controls style of tabs.  Thanks to Cosmin
	Popescu (a.k.a. cosminadrianpopescu).

	Added :tabnew command that creates a new tab.  Thanks to Cosmin
	Popescu (a.k.a. cosminadrianpopescu).

	Added :tabname command that updates name of the current tab.

	Added :tabc[lose] command that closes current tab unless it's the last one.

	Added :qa[ll], :wqa[ll] and :xa[ll] commands that always try to exit vifm no
	matter how many tabs are open.
