@@ -10,6 +10,9 @@
 	Fixed possible crashes after certain patterns of using view mode and
 	closing tabs.
 
+	Fixed some resources (like output pipe for --choose-files and
+	--choose-dir) being inherited by child processes.  Thanks to Vigi.
+
 0.10-beta to 0.10 (2018-11-11)
 
 	Display list of files in removal confirmation dialog.  Thanks to ovk.
